--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,15 +9,20 @@
 
     <TextView
         android:id="@+id/current_year"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:background="@drawable/common_google_signin_btn_text_light"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
         android:textSize="36dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:id="@+id/months"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_below="@+id/current_year">
 
         <TextView
             android:id="@+id/previous_month"
@@ -48,6 +53,7 @@
 
     <GridView
         android:id="@+id/week_days"
+        android:layout_below="@+id/months"
         android:layout_width="match_parent"
         android:layout_height="36dp"
         android:numColumns="7">
@@ -56,8 +62,10 @@
 
     <GridView
         android:id="@+id/calendar_grid"
+        android:layout_below="@+id/week_days"
         android:layout_width="match_parent"
-        android:layout_height="353dp"
+        android:layout_height="wrap_content"
+        android:background="@color/headingColor"
         android:numColumns="7">
 
 
@@ -67,6 +75,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:gravity="center_horizontal"
+        android:layout_above="@+id/ok_button"
         android:checkedButton="@+id/morning">
 
         <RadioButton
@@ -101,8 +111,8 @@
         android:layout_height="wrap_content"
         android:background="@color/red"
         android:gravity="center"
-        android:text="OK"
         android:textSize="24sp"
+        android:layout_alignParentBottom="true"
         android:visibility="visible" />
 
     <!--<CalendarView-->
@@ -114,4 +124,4 @@
     <!--</CalendarView>-->
 
 
-</LinearLayout>
+</RelativeLayout>
