--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -70,12 +70,13 @@
     </GridView>
 
     <RadioGroup
+        android:id="@+id/radiobuttons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_horizontal"
         android:layout_above="@+id/ok_button"
-        android:checkedButton="@+id/morning">
+        android:checkedButton="@+id/morning"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
 
         <RadioButton
             android:id="@+id/morning"
@@ -83,8 +84,7 @@
             android:layout_height="wrap_content"
             android:onClick="onRadioButtonClicked"
             android:text="Morning"
-            android:textColor="@color/morning_color"
-             />
+            android:textColor="@color/morning_color" />
 
         <RadioButton
             android:id="@+id/afternoon"
